fix querydsl